# nowcasting

./: .gitignore  prd.md  pyproject.toml  run_pipeline.py
atividade/: Resposta_atividade_02_23.md  atividade_tcc.md  resposta_atividade_tcc.md
configs/: series.yaml
data/processed/: base_modelagem.parquet  base_modelagem_1.parquet  base_modelagem_2.parquet  base_unica_mensal.parquet  panel.parquet
data/raw/: cambio_ptax_venda.parquet  ibc_br_dessaz.parquet  inadimplencia_carteira_total.parquet  inadimplencia_pf_total.parquet  ipca_variacao_mensal.parquet  pmc_volume_vendas_dessazonalizado.parquet  rendimento_medio_real.parquet  saldo_carteira_credito_total.parquet  selic_acumulada_mes.parquet  taxa_desocupacao.parquet  taxa_juros_pf_total.parquet
notebooks/: 00_data_extraction.ipynb  00_tests.ipynb  01_eda.ipynb  02_modeling.ipynb  02_preprocessing.ipynb  03_modeling.ipynb  03_results.ipynb
results/: model_comparison.csv  predictions.csv
src/: evaluation.py  features.py  ingestion.py  models.py  processing.py
tests/: test_features.py  test_ingestion.py  test_processing.py
